--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Y\'Menu</string>
+    <string name="title_activity_navigation_view">NavigationView</string>
+    <string name="title_activity_nav_host">NavHost</string>
+    <string name="title_activity_bottom_navigation">BottomNavigation</string>
 </resources>
